--- a/style.CSS
+++ b/style.CSS
@@ -100,7 +100,7 @@
   button {
       width: 100%;
       padding: 10px;
-      background-color: #28a745;
+      background-color: #2755d4;
       color: #fff;
       border: none;
       border-radius: 5px;
