--- a/styles/global.css
+++ b/styles/global.css
@@ -130,3 +130,10 @@ th, td {
   word-break: break-word;        
 }
 
+
+.error-message {
+    color: red;
+    font-size: 0.8rem;
+    margin-top: 4px;
+    display: block;
+}
