--- a/pages/tasks/viewall.css
+++ b/pages/tasks/viewall.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Segoe UI', sans-serif;
     color: #333;
     line-height: 1.6;
+    background-color: #d8d8d8;
 }
 
 .container {
@@ -11,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 
 .form-container,
 .table-container {
